--- a/ioos_catalog/templates/daily_service_report_page.html
+++ b/ioos_catalog/templates/daily_service_report_page.html
@@ -3,7 +3,7 @@
 {% block jumbo %}
 <div class="row">
   <div class="col-lg-10">
-  <h3>Daily Report<br/><small><a href="/">IOOS Catalog &#187; <a href="{{ url_for('services') }}">Services</a></small></h3>
+  <h3>Daily Report</h3>
   </div>
   <div class="col-lg-2">
     <input type="date" name="enddate" class="form-control" style="margin-top: 10px;" value="{{ end_time | datetimeformat('%Y-%m-%d') }}" />
