--- a/ioos_catalog/templates/layout.html
+++ b/ioos_catalog/templates/layout.html
@@ -3,7 +3,7 @@
 {% block basepage %}
 <div class="jumbotron">
   <div class="container">
-    {% block jumbo %}{% endblock %}
+    {% block jumbo %}<br />{% endblock %}
   </div>
 </div>
 
