--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -15,6 +15,36 @@
     {% endblock %}
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-custom">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nb-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-img-brand" href="/">
+              <img src="{{ url_for('.static', filename='img/ioos.png') }}" alt="IOOS Catalog" />
+            </a>
+            <a class="navbar-brand" href="/">
+              Catalog
+            </a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="nb-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="{{ url_for('services') }}">Services</a></li>
+              <li><a href="{{ url_for('datasets') }}">Datasets</a></li>
+              <li><a href="{{ url_for('asset_map') }}">Asset Map <span class="label label-info">BETA</span></a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="{{ url_for('help') }}">Help</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     {% block basepage %}{% endblock %}
   </body>
 </html>
