--- a/ioos_catalog/templates/help.html
+++ b/ioos_catalog/templates/help.html
@@ -3,7 +3,7 @@
 {% block jumbo %}
 <div class="row">
   <div class="col-lg-6">
-    <h3> <a href="{{ url_for('help') }}">Help</a><br/><small><a href="/">IOOS Catalog</a></small></h3>
+    <h3> <a href="{{ url_for('help') }}">Help</a></h3>
   </div>
 </div>
 {% endblock %}
