Badges on main page type buttons shouldn't be green

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -63,6 +63,10 @@ svg .dataset path {
   border-color: #FFA855;
 }
 
+.btn-success .badge {
+  color: #ef7825;
+}
+
 .jumbotron {
   padding-top: 5px;
   padding-bottom: 5px;
