Explain the asset inventory

--- a/ioos_catalog/templates/metadata_form.html
+++ b/ioos_catalog/templates/metadata_form.html
@@ -54,7 +54,10 @@
   </div>
 
   <div class="col-sm-6">
-    <p>Explain this!</p>
+    <h2>Metadata/Asset Inventory</h2>
+
+    <p>Services and Datasets generate Metadata records when harvested, according to the IOOS Asset Inventory Map document. The concepts contained in this mapping is a normalization of data across disparate Datasets and sources.  Using the Metadata/Asset Inventory tool, you can view or download (in CSV) table of these Metadata concepts.</p>
+
   </div>
 </div>
 
