Add asset inventory link on nav

--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -37,6 +37,7 @@
             <ul class="nav navbar-nav">
               <li><a href="{{ url_for('services') }}">Services</a></li>
               <li><a href="{{ url_for('datasets') }}">Datasets</a></li>
+              <li><a href="{{ url_for('metadatas') }}">Asset Inventory</a></li>
               <li><a href="{{ url_for('asset_map') }}">Asset Map <span class="label label-info">BETA</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
