Updated a typo in help

--- a/ioos_catalog/templates/help.html
+++ b/ioos_catalog/templates/help.html
@@ -23,7 +23,7 @@
 
   <p>A dataset is some form of data produced by a service. Gridded data, point data, and observation data are just some of the datasets harvested from a service. A single service may produce one or more datasets.</p>
 
-  <div class="alert alert-info">Only DAP and SOS dataset are currently supported.</div>
+  <div class="alert alert-info">Only DAP and SOS datasets are currently supported.</div>
 
   <h4>Why do some regions/groups have many services while others don't?</h4>
 
