Fix regions filter instructions text
Fixes #66

--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -11,7 +11,7 @@
       <div class="col-lg-6">
         <h3 style="margin-top: 0px">Explore Services</h3>
 
-        <p>1. Pick region(s) using the dropdown or the map:</p>
+        <p>1. Pick provider(s) using the dropdown or the map:</p>
 
         <select id="region-select" class="form-control" multiple="multiple">
           {%- for provider in providers %}
