Consolidated feature type names
Fixes #82

--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -127,6 +127,7 @@ function updateTypeBtns(srcData, keyFunc, btnContainerSel, urlBase, overviewSel,
         'btn-lg': true,
         'btn-block': true,
       })
+      //return readable tooltip name or default to the key
       .attr('title', function(d) { return tooltips[d.key] || null; })
       .text(function(d) { return d.key + " "; })
     .append('span')
@@ -341,12 +342,15 @@ var datasetsByProvider = {{ dataset_counts_by_provider | tojson }};
 var updates            = {{ updates | tojson }};
 var dsTranslate = {
   RGRID: 'Rectilinear Grid',
+  grid: 'Rectilinear Grid',
+  Grid: 'Rectilinear Grid',
   CGRID: 'Curvilinear Grid',
+  Unspecified: 'Unspecified data type',
   NCELL: 'Irregular/Unstructured Grid',
   UNKNOWN: 'Unknown',
   "(NONE)": 'No Dataset Type detected',
   "FIXED MET STATION": 'Fixed Met Station',
-  BUOY: 'Buoy'
+  Buoy: 'Buoy'
 };
 
 //activate help tooltips for services and datasets
