--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -85,6 +85,17 @@ svg path.point.perm-active {
   height: 100%;
 }
 
+#spinner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#spinner > img {
+  width: 100%;
+  height: 100%;
+}
+
 .graticule {
   fill: none;
   stroke: #888;
