Removes "All" from the services drop-down on asset-map

--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -81,7 +81,7 @@
     <div id="filters">
       <select name="filter-provider" class="form-control">
         <option value="-">-</option>
-        <option value="null">All</option>
+        <!-- <option value="null">All</option> -->
         {% for region in regions %}
         <option>{{ region }}</option>
         {% endfor %}
