--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -89,11 +89,13 @@ svg path.point.perm-active {
   position: absolute;
   width: 100%;
   height: 100%;
+  padding-left: 35%;
+  padding-top: 25%;
 }
 
 #spinner > img {
-  width: 100%;
-  height: 100%;
+  width: 35%;
+  height: 35%;
 }
 
 .graticule {
