--- a/ioos_catalog/templates/services.html
+++ b/ioos_catalog/templates/services.html
@@ -3,29 +3,46 @@
 {% block jumbo %}
 <div class="row">
   <div class="col-sm-4">
+    <br>
     <h3><a href="{{ url_for('services') }}">Services</a></h3>
   </div>
-  <form class="form-inline">
-    <div class="col-sm-8" style="text-align: right;">
-      <label for="filter-provider">By Provider</label>
-      <select name="filter-provider" class="form-control">
-        <option value="null">-</option>
-        {%- for provider in providers|sort %}
-        <option>{{ provider }}</option>
-        {%- endfor %}
-      </select>
-      &nbsp;
-      <label for="filter-type">By Type</label>
-      <select name="filter-type" class="form-control">
-        <option value="null">-</option>
-        <option>WMS</option>
-        <option>DAP</option>
-        <option>WCS</option>
-        <option>SOS</option>
-      </select>
-    </div>
-  </form>
-</div>
+  <!-- Left column for fields -->
+  <div class="col-sm-4" style="text-align: left;">
+    <label for="filter-provider">By Provider</label>
+    <!-- This is the Drop-Down box for the providers
+         The default text is managed by JS -->
+    <select id="region-select" class="form-control" multiple="multiple">
+      {%- for provider in providers|sort %}
+      <option>{{ provider }}</option>
+      {%- endfor %}
+    </select>
+  </div>
+  <div class="col-sm-2">
+    <label for="filter-type">By Type</label>
+    <!-- This is the drop down for the Types -->
+    <select id='filter-select' name="filter-type" class="form-control">
+      <option value="null">-</option>
+      <option>WMS</option>
+      <option>DAP</option>
+      <option>WCS</option>
+      <option>SOS</option>
+    </select>
+  </div>
+  <div class="col-sm-2">
+    <!-- Single button -->
+    <label>Filter</label>
+    <br>
+    <div class="btn-group" style="top-padding: 25%;">
+      <button id="filter-btn" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        Filter <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Apply Filter</a></li>
+        <li><a href="#">Reset Filter</a></li>
+      </ul>
+    </div> <!-- btn-group -->
+  </div> <!-- col-sm-4 -->
+</div> <!-- row -->
 {% endblock %}
 
 {% block page %}
@@ -99,7 +116,49 @@
 
     <script type="text/javascript">
       $(function() {
+        $('#region-select').chosen({
+          placeholder_text_multiple: "No filters selected..."
+        });
+        $('.dropdown-menu li a').click(function() {
+          if($(this).text() == "Apply Filter") {
+            applyFilter();
+          } else {
+            resetFilter();
+          }
+        });
 
+        /* Split the URL up to parse out the provider and filter components */
+        var currentURL = document.URL;
+        var filters = currentURL.split("/filter/")[1]; /* Split on the /filter/ */
+        var filterSplit = filters.split("/");
+        var providers = filterSplit[0].split(","); /* an array of providers */
+        var filterType = filterSplit[1];
+        var validOptions = [];
+        var validProviders = [];
+        /* Now go through each of the options and make sure the providers are in the options */
+        $('#region-select option').each(function() {
+          validOptions.push($(this).val());
+        });
+        for(var i in providers) {
+          if(validOptions.indexOf(providers[i]) >= 0) {
+            validProviders.push(providers[i]);
+          }
+        }
+        /* Update them appropriately */
+        $('#region-select').val(validProviders);
+        $('#region-select').trigger("chosen:updated");
+
+        /* Do the same for the filters */
+        var validFilters = [];
+        $('#filter-select option').each(function() {
+            validFilters.push($(this).val());
+        });
+        if(validFilters.indexOf(filterType) >= 0) {
+          $('#filter-select').val(filterType);
+        }
+
+
+        /**
         {% if 'data_provider' in filters and filters['data_provider']['$in']|length == 1 %}
           $('select[name="filter-provider"]').val('{{ filters['data_provider']['$in'][0] }}');
         {% endif %}
@@ -121,7 +180,32 @@
 
           window.location = url;
         });
+        */
       });
+
+      /**
+       * Makes a comma-delimited string using the contents of the #region-selected 
+       * DOM and sets the URL
+       */
+      function applyFilter() {
+        var regionSelect = $('#region-select').val();
+        var regionString = null;
+        var filterType = $('#filter-select').val();
+        if(typeof regionSelect != 'undefined' && regionSelect !== null) {
+          regionString = regionSelect.join(",");
+        }
+        var url = "{{url_for("services")}}" + regionString;
+        if(filterType != "null") {
+          url += "/" + filterType;
+        }
+        window.location = url;
+      }
+
+      function resetFilter() {
+        var url = "{{url_for("services")}}";
+        window.location = url;
+      }
+
     </script>
 
 </div>
