--- a/ioos_catalog/templates/services.html
+++ b/ioos_catalog/templates/services.html
@@ -17,18 +17,17 @@
       {%- endfor %}
     </select>
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-3" style="text-align: left;">
     <label for="filter-type">By Type</label>
     <!-- This is the drop down for the Types -->
-    <select id='filter-select' name="filter-type" class="form-control">
-      <option value="null">-</option>
+    <select id="filter-select" class="form-control" multiple="multiple">
       <option>WMS</option>
       <option>DAP</option>
       <option>WCS</option>
       <option>SOS</option>
     </select>
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-1">
     <!-- Single button -->
     <label>Filter</label>
     <br>
@@ -117,7 +116,10 @@
     <script type="text/javascript">
       $(function() {
         $('#region-select').chosen({
-          placeholder_text_multiple: "No filters selected..."
+          placeholder_text_multiple: "No providers selected..."
+        });
+        $('#filter-select').chosen({
+          placeholder_text_multiple: "No dataset types selected..."
         });
 
         /* Callback for the click event */
@@ -184,7 +186,7 @@
         var filters = currentURL.split("/filter/")[1]; /* Split on the /filter/ */
         var filterSplit = filters.split("/");
         selected.providers = filterSplit[0].split(","); /* an array of providers */
-        selected.filter = filterSplit[1];
+        selected.filters = filterSplit[1].split(",");
 
         return selected;
       }
@@ -205,18 +207,29 @@
         $('#region-select').trigger("chosen:updated");
 
         /* Do the same for the filters */
-        if(valid.filters.indexOf(selected.filter) >= 0) {
-          $('#filter-select').val(selected.filter);
+        var validFilters = [];
+        for(var i in selected.filters) {
+          if(valid.filters.indexOf(selected.filters[i]) >= 0) {
+            validFilters.push(selected.filters[i]);
+          }
         }
+        $('#filter-select').val(validFilters);
+        $('#filter-select').trigger("chosen:updated");
       }
 
       function applyFilter() {
         var regionSelect = $('#region-select').val();
         var regionString = null;
         var filterType = $('#filter-select').val();
+        var filterString = null;
+
         if(typeof regionSelect != 'undefined' && regionSelect !== null) {
           regionString = regionSelect.join(",");
         }
+        if(typeof filterType != 'undefined' && filterType !== null) {
+          filterString = filterType.join(",");
+        }
+
         var url = "{{url_for("services")}}" + regionString;
         if(filterType != "null") {
           url += "/" + filterType;
