--- a/ioos_catalog/templates/datasets.html
+++ b/ioos_catalog/templates/datasets.html
@@ -2,28 +2,34 @@
 
 {% block jumbo %}
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-sm-3">
     <h3><a href="{{ url_for('datasets') }}">Datasets</a></h3>
   </div>
-  <form class="form-inline">
-    <div class="col-sm-8" style="text-align: right;">
-      <label for="filter-provider">By Provider</label>
-      <select name="filter-provider" class="form-control">
-        <option value="null">-</option>
-        {%- for provider in providers|sort %}
-        <option>{{ provider }}</option>
-        {%- endfor %}
-      </select>
-      &nbsp;
-      <label for="filter-type">By Type</label>
-      <select name="filter-type" class="form-control">
-        <option value="null">-</option>
-        {%- for a in assettypes|sort %}
-        <option>{{ a }}</option>
-        {%- endfor %}
-      </select>
-    </div>
-  </form>
+  <!-- Left column for fields -->
+  <div class="col-sm-4" style="text-align: left;">
+    <label for="filter-provider">By Provider</label>
+    <!-- This is the Drop-Down box for the providers
+         The default text is managed by JS -->
+    <select id="region-select" data-placeholder="No providers selected..." class="form-control" multiple="multiple" style="height:30px;">
+    </select>
+  </div>
+  <div class="col-sm-3" style="text-align: left;">
+    <label for="filter-type">By Type</label>
+    <!-- This is the drop down for the Types -->
+    <select id="filter-select" data-placeholder="No dataset types selected..." class="form-control" multiple="multiple" style="height:30px;">
+    </select>
+  </div>
+  <div class="col-sm-2">
+    <!-- Single button -->
+    <div class="pull-right">
+      <label>Filter</label>
+      <br>
+      <div class="btn-group">
+        <button id='apply-btn' type="button" class="btn btn-default">Apply</button>
+        <button id='reset-btn' type="button" class="btn btn-default">Reset</button>
+      </div> <!-- btn-group -->
+    </div> <!-- pull-right -->
+  </div> <!-- col-sm-4 -->
 </div>
 {% endblock %}
 
@@ -49,29 +55,116 @@
 
     <script type="text/javascript">
       $(function() {
+        populateBoxes();
 
-        {% if 'services.data_provider' in filters and filters['services.data_provider']['$in']|length == 1 %}
-          $('select[name="filter-provider"]').val('{{ filters['services.data_provider']['$in'][0] }}');
-        {% endif %}
+        $('#region-select').chosen();
+        $('#filter-select').chosen();
 
-        {% if 'services.asset_type' in filters %}
-          $('select[name="filter-type"]').val('{{ filters['services.asset_type'] }}');
-        {% endif %}
-
-        $('select[name^="filter"]').change(function() {
-          var provVal = $('select[name="filter-provider"]').val();
-          var typeVal = $('select[name="filter-type"]').val();
-          if (provVal == "null" && typeVal == "null") {
-            window.location = "{{ url_for("datasets") }}";
-            return;
-          }
-          var url = '{{ url_for("datasets") }}filter/';
-          url += provVal + "/";
-          url += typeVal;
-
-          window.location = url;
+        /* Callback for the click event */
+        $('#apply-btn').click(function() {
+          applyFilter();
         });
+        $('#reset-btn').click(function() {
+          resetFilter();
+        });
+
+        updateSelectBoxes();
+
+
       });
+
+      /*
+       * Returns the valid providers and filters
+       */
+      function getValids() {
+        var valid = {};
+        valid.providers = [];
+        valid.filters = [];
+        
+        $('#region-select option').each(function() {
+          valid.providers.push($(this).val());
+        });
+        
+        $('#filter-select option').each(function() {
+          valid.filters.push($(this).val());
+        });
+
+        return valid;
+      }
+
+      function getSelected() {
+        var selected = {};
+        /* Split the URL up to parse out the provider and filter components */
+        var currentURL = document.URL;
+        var filters = currentURL.split("/filter/")[1]; /* Split on the /filter/ */
+        var filterSplit = filters.split("/");
+        selected.providers = filterSplit[0].split(","); /* an array of providers */
+        selected.filters = filterSplit[1].split(",");
+
+        return selected;
+      }
+
+      function populateBoxes() {
+        {%- for provider in providers|sort %}
+        $('#region-select').append("<option>{{ provider }}</option>");
+        {%- endfor %}
+        {%- for a in assettypes|sort %}
+        $('#filter-select').append("<option>{{a}}</option>");
+        {%- endfor %}
+      }
+
+
+
+      function updateSelectBoxes() {
+        var valid = getValids();
+        var selected = getSelected();
+        var validProviders = [];
+        /* Now go through each of the options and make sure the providers are in the options */
+        for(var i in selected.providers) {
+          if(valid.providers.indexOf(selected.providers[i]) >= 0) {
+            validProviders.push(selected.providers[i]);
+          }
+        }
+        /* Update them appropriately */
+        $('#region-select').val(validProviders);
+        $('#region-select').trigger("chosen:updated");
+
+        /* Do the same for the filters */
+        var validFilters = [];
+        for(var i in selected.filters) {
+          if(valid.filters.indexOf(selected.filters[i]) >= 0) {
+            validFilters.push(selected.filters[i]);
+          }
+        }
+        $('#filter-select').val(validFilters);
+        $('#filter-select').trigger("chosen:updated");
+      }
+
+      function applyFilter() {
+        var regionSelect = $('#region-select').val();
+        var regionString = null;
+        var filterType = $('#filter-select').val();
+        var filterString = null;
+
+        if(typeof regionSelect != 'undefined' && regionSelect !== null) {
+          regionString = regionSelect.join(",");
+        }
+        if(typeof filterType != 'undefined' && filterType !== null) {
+          filterString = filterType.join(",");
+        }
+
+        var url = "{{url_for("datasets")}}filter/" + regionString;
+        if(filterType != "null") {
+          url += "/" + filterType;
+        }
+        window.location = url;
+      }
+
+      function resetFilter() {
+        var url = "{{url_for("datasets")}}";
+        window.location = url;
+      }
+
     </script>
 
 </div>
