--- a/ioos_catalog/templates/metadatas.html
+++ b/ioos_catalog/templates/metadatas.html
@@ -21,21 +21,22 @@
 
 {% block page %}
 
-  <table class="table table-striped table-bordered table-condensed" style="font-size: 11px;">
-    <thead>
-      <tr>
-        <th>Serv/DS</th>
-        <th>Provider</th>
-        <th>Type</th>
-        {%- for col in columns %}
-        <th>{{ col }}</th>
-        {%- endfor %}
-      </tr>
-    </thead>
-    <tbody>
-    {%- for m in metadatas %}
-    {# Each main row is going to have a rowspan equal to the number of variable names #}
-    {#
+  <div class="overflow">
+    <table class="table table-bordered table-condensed" style="font-size: 11px;">
+      <thead>
+        <tr>
+          <th>Serv/DS</th>
+          <th>Provider</th>
+          <th>Type</th>
+          {%- for col in columns %}
+          <th>{{ col }}</th>
+          {%- endfor %}
+        </tr>
+      </thead>
+      <tbody>
+      {%- for m in metadatas %}
+      {# Each main row is going to have a rowspan equal to the number of variable names #}
+      {#
 | Station Publisher Email | Variable Names | Variable Units           | Altitude Units |
 |                         | time           | seconds since 1970-01-01 |                |
 |                         | depth          | meters                   |                |
@@ -44,41 +45,42 @@
 |                         | u              | m/s                      |                |
 |                         | v              | m/s                      |                |
   #}    
-      {%- set varcount = m.get("varcount", 1) %}
-      <tr>
-        <td rowspan="{{varcount}}">{{ services[m['ref_id']].name if m['ref_type']=='service' }}</td>
-        <td rowspan="{{varcount}}">{{ services[m['ref_id']].data_provider if m['ref_type']=='service' }}</td>
-        <td rowspan="{{varcount}}">{{ m['ref_type'] }}</td>
+        {%- set varcount = m.get("varcount", 1) %}
+        <tr>
+          <td rowspan="{{varcount}}">{{ services[m['ref_id']].name if m['ref_type']=='service' }}</td>
+          <td rowspan="{{varcount}}">{{ services[m['ref_id']].data_provider if m['ref_type']=='service' }}</td>
+          <td rowspan="{{varcount}}">{{ m['ref_type'] }}</td>
 
-        {%- for col in columns %}
-          {%- set v=m.get(col, "-") %}
+          {%- for col in columns %}
+            {%- set v=m.get(col, "-") %}
 
-          {%- if col == 'Variable Names*' %}
-          <td> {{ v[0] }} </td>
-          {%- elif col == 'Variable Units*' %}
-          <td> {{ v[0] }} </td>
-          {%- elif v|is_list %}
-          <td rowspan="{{varcount}}">
-            <ul class="list-unstyled">
-              {%- for vv in v %}
-              <li>{{ vv }}</li>
-              {%- endfor %}
-            </ul>
-          </td>
-          {% else %}
-          <td rowspan="{{varcount}}">{{ v }}</td>
-          {% endif %}
-        {%- endfor %}
-      </tr>
-      {% for i in range(1, varcount) %}
-      <tr>
-        <td>{{m['Variable Names*'][i]}}</td>
-        <td>{{m['Variable Units*'][i]}}</td>
-      </tr>
-      {% endfor %}
-    {%- endfor %}
-    </tbody>
-  </table>
+            {%- if col == 'Variable Names*' %}
+            <td> {{ v[0] }} </td>
+            {%- elif col == 'Variable Units*' %}
+            <td> {{ v[0] }} </td>
+            {%- elif v|is_list %}
+            <td rowspan="{{varcount}}">
+              <ul class="list-unstyled">
+                {%- for vv in v %}
+                <li>{{ vv }}</li>
+                {%- endfor %}
+              </ul>
+            </td>
+            {% else %}
+            <td rowspan="{{varcount}}">{{ v }}</td>
+            {% endif %}
+          {%- endfor %}
+        </tr>
+        {% for i in range(1, varcount) %}
+        <tr>
+          <td>{{m['Variable Names*'][i]}}</td>
+          <td>{{m['Variable Units*'][i]}}</td>
+        </tr>
+        {% endfor %}
+      {%- endfor %}
+      </tbody>
+    </table>
+  </div> <!-- .overflow -->
   <script type="text/javascript">
     $(function() {
 
