Added tooltips for dataset categories

--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -345,12 +345,19 @@ var dsTranslate = {
   grid: 'Rectilinear Grid',
   Grid: 'Rectilinear Grid',
   CGRID: 'Curvilinear Grid',
-  Unspecified: 'Unspecified data type',
-  NCELL: 'Irregular/Unstructured Grid',
   UNKNOWN: 'Unknown',
   "(NONE)": 'No Dataset Type detected',
   "FIXED MET STATION": 'Fixed Met Station',
-  Buoy: 'Buoy'
+  'All': 'Show all datasets',
+  'Regular Grid': 'Rectilinear Grid',
+  'Trajectory': 'Data taken from a trajectory with varying location in time.  Often corresponds with glider data.',
+  'Curvilinear Grid': 'Curvilinear Grid (i.e. ROMS models)',
+  'Point': "Geometry conforming to CF 'point' or CDM 'Point' geometries",
+  'Time Series': 'CF timeSeries data.  Often corresponds with a station recording data over time.',
+  'Unspecified': 'Unspecified data type',
+  'NCELL': 'Irregular/Unstructured Grid',
+  'Unstructured Grid': 'Unstructured grid implementing ugrid conventions',
+  'Buoy': 'Platform is a buoy'
 };
 
 //activate help tooltips for services and datasets
