Part of #46 - Adds layout and style for feedback form

--- a/ioos_catalog/templates/help.html
+++ b/ioos_catalog/templates/help.html
@@ -6,6 +6,7 @@
     <li><a href="{{ url_for('help') }}">Help</a></li>
     <li> <a href="https://github.com/ioos/catalog/wiki/Roadmap">Roadmap</a></li>
     <li> <a href="https://github.com/ioos/catalog/milestones">Milestones</a></li>
+    <li> <a href="{{url_for('feedback')}}">Feedback</a></li>
   <ul>
 </div>
 {% endblock %}
