--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -335,3 +335,9 @@ svg path.dataset.active {
   font-size: 24px;
   text-decoration: none;
 }
+
+#captcha-panel img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
