--- a/ioos_catalog/templates/feedback.html
+++ b/ioos_catalog/templates/feedback.html
@@ -19,23 +19,23 @@
       We are always looking to improve the tools on this website. If you have feedback you would like to share, we'd appreciate it. Thank you!
     <p>
 
-    <form role="form" action="/help/feedback/submit" method="post">
+    <form id="feedbackform" role="form" action="/help/feedback/submit" method="post">
       <div class="form-group">
-        <label for="name">Enter your name</label>
+        <label id='nameLabel' for="name">Enter your name</label>
         <input name="name" type="text" class="form-control" id="nameInput" placeholder="Your Name">
       </div>
       <div class="form-group">
-        <label for="email">Enter your email address</label>
+        <label id='emailLabel' for="email">Enter your email address</label>
         <input name="email" type="email" class="form-control" id="emailInput" placeholder="Your Email">
       </div>
       <div class="form-group">
-        <label for='comments'>Comments</label>
+        <label id='commentLabel' for='comments'>Comments</label>
         <textarea name="comments" id='comments' class="form-control" rows="8"></textarea>
       </div>
       <div id='captcha-panel' class="panel panel-default">
         <div class="panel-heading">CAPTCHA</div>
         <div class="panel-body">
-          <img src="http://upload.wikimedia.org/wikipedia/commons/6/69/Captcha.jpg" alt="Captcha"></img>
+          <img id="captcha_img" src="" alt="Captcha"></img>
           <input name="captcha_text" type="text" class="form-control" id="captchaInput">
         </div> <!-- panel-body -->
       </div> <!-- panel -->
@@ -43,5 +43,70 @@
     </form>
   </div> <!-- col-md-6 -->
 </div> <!-- container -->
+
+<script type="text/javascript">
+ 
+$(function() {
+    initiateCaptcha();
+}); // document.ready
+
+function initiateCaptcha() {
+    var image_key = null;
+
+    $.ajax({
+      url: '/captcha_refresh/',
+      dataType: 'json',
+      success: function(data) {
+        $('#captcha_img').attr("src", data.image_url);
+        $("#feedbackform").submit(function(e) {
+          e.preventDefault();
+          var actionURL = e.currentTarget.action;
+          console.log(actionURL);
+          var formData = {
+            "name" : $('#nameInput').val(),
+            "email" : $('#emailInput').val(),
+            "comments" : $('#comments').val(),
+            "captcha_text" : $('#captchaInput').val(),
+            "captcha_img" : data.key
+          };
+          
+          $.ajax({
+            url: actionURL,
+            type: 'POST',
+            dataType: 'json',
+            contentType: 'application/json',
+            data: JSON.stringify(formData),
+            success: function(data) {
+              window.location = "{{url_for('feedback_success')}}";
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+              console.log("OH NO");
+              console.log(jqXHR);
+              console.log(textStatus);
+              console.log(errorThrown);
+              if(jqXHR.status == '400') { // Wrong Captcha or missing fields
+                highlightFields(jqXHR.responseJSON);
+                initiateCaptcha();
+              }
+            },
+          }); //ajax
+        }); // submit
+      } // success
+    }); // root ajax
+
+}
+
+function highlightFields(response) {
+  response.fields.forEach(function(field) {
+      var domID = '#' + field;
+      console.log(domID);
+      $(domID).css('color', 'red');
+      
+  });
+  console.log("Highlight");
+  console.log(response);
+}
+
+</script>
 
 {% endblock %}
