Configurable emails and template for the email

--- a/ioos_catalog/templates/feedback_success.html
+++ b/ioos_catalog/templates/feedback_success.html
@@ -21,4 +21,13 @@
 
   </div> <!-- col-md-6 -->
 </div> <!-- container -->
+
+<script type='text/javascript'>
+  $(function() {
+      setTimeout(function() {
+        window.location = '/';
+      },1000);
+  });
+
+</script>
 {% endblock %}
